# nn

./: Abs.lua  AbsCriterion.lua  BCECriterion.lua  BatchNormalization.lua  CMakeLists.txt  ClassNLLCriterion.lua  ClassSimplexCriterion.lua  DistKLDivCriterion.lua  ELU.lua  FeatureLPPooling.lua  GatedLinearUnit.lua  HardShrink.lua  HardTanh.lua  IndexLinear.lua  L1Cost.lua  LeakyReLU.lua  LogSigmoid.lua  LogSoftMax.lua  LookupTable.lua  MSECriterion.lua  MarginCriterion.lua  MultiLabelMarginCriterion.lua  MultiMarginCriterion.lua  PReLU.lua  RReLU.lua  ReLU6.lua  Sigmoid.lua  SmoothL1Criterion.lua  SoftMarginCriterion.lua  SoftMax.lua  SoftMin.lua  SoftPlus.lua  SoftShrink.lua  SparseLinear.lua  SpatialAdaptiveAveragePooling.lua  SpatialAdaptiveMaxPooling.lua  SpatialAveragePooling.lua  SpatialClassNLLCriterion.lua  SpatialConvolution.lua  SpatialConvolutionLocal.lua  (+38 more)
lib/: CMakeLists.txt
lib/THNN/: CMakeLists.txt  THNN_lua.c  THNNwrap.lua
lib/THNN/generic/: FeatureLPPooling.c  SpatialDilatedConvolution.c  THNN.h  VolumetricConvolutionMM.c  VolumetricDilatedConvolution.c
lib/THNN/tools/: extract.lua
test/: LinearTHNN.lua
